Bug 64506 - Weston crashes when opening input device '/dev/input/event11'
Summary: Weston crashes when opening input device '/dev/input/event11'
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-12 19:16 UTC by Ryan
Modified: 2013-06-04 09:56 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Weston log (4.04 KB, text/plain)
2013-05-12 19:20 UTC, Ryan
Details
Output of udevadm info --name=/dev/input/event11 --attribute-walk (702 bytes, text/plain)
2013-05-12 19:21 UTC, Ryan
Details
Patch to improve error debugging (913 bytes, patch)
2013-05-20 15:50 UTC, Rob Bradford
Details | Splinter Review
Only abort weston startup if seat incomplete (1.56 KB, patch)
2013-05-20 16:59 UTC, Rob Bradford
Details | Splinter Review
Weston log with cool new patches (4.54 KB, text/plain)
2013-05-20 18:12 UTC, Ryan
Details

Description Ryan 2013-05-12 19:16:09 UTC
When I try to launch Weston it can't start due to it not being able to open /dev/input/event11

Weston startup log: http://ix.io/5Bg

Output of udevadm info --name=/dev/input/event11 --attribute-walk: http://ix.io/5BN

If any other information is needed I can supply it.
Comment 1 Ryan 2013-05-12 19:20:02 UTC
Created attachment 79208 [details]
Weston log
Comment 2 Ryan 2013-05-12 19:21:52 UTC
Created attachment 79209 [details]
Output of udevadm info --name=/dev/input/event11 --attribute-walk

Cheap laptops have accelerometers?
Comment 3 Rob Bradford 2013-05-20 15:49:53 UTC
Hi Ryan, thanks for opening this bug report. I'm going to attach a patch that will generate some debug messages in weston-launch about why opening the device failed.

Would you be able to apply that patch and then include the output from weston-launch when running with that patch.
Comment 4 Rob Bradford 2013-05-20 15:50:41 UTC
Created attachment 79577 [details] [review]
Patch to improve error debugging
Comment 5 Ryan 2013-05-20 16:24:44 UTC
I can't at the moment, as the machine at which I get the bug appears to have a small spot of hardware failure. :/
Comment 6 Rob Bradford 2013-05-20 16:57:49 UTC
Ryan, oh dear. I've also attached a patch which should allow weston to continue to start provided the seat has both a keyboard and pointer.
Comment 7 Rob Bradford 2013-05-20 16:59:15 UTC
Created attachment 79579 [details] [review]
Only abort weston startup if seat incomplete
Comment 8 Ryan 2013-05-20 17:40:40 UTC
Laptop decided to work again! :D

So, how do I apply a patch? :)
Comment 9 Ryan 2013-05-20 17:57:25 UTC
Figured out how to do it, nvm

Got both patches applied, will build and test :)
Comment 10 Ryan 2013-05-20 18:12:19 UTC
Well, it works with both the patches!

I'll attach the log here
Comment 11 Ryan 2013-05-20 18:12:47 UTC
Created attachment 79580 [details]
Weston log with cool new patches
Comment 12 blackwolf12333 2013-05-29 18:06:09 UTC
I had the same problem, I am also running Arch...
The patch worked(my screen is turned 90 degrees, but it works...) and I found a way to stop it from happening. You must unload the acer_wmi module with 'sudo modprobe -r acer_wmi'.
That solves it for me :)
Comment 13 Rob Bradford 2013-06-04 09:56:13 UTC
Kristian has merged a version of this patch so that we will not abort compositor creation if there is a problem opening an input device:  

commit f9e9d0d434e06b86d527f2b19f0d48a7539114b4
Author: Rob Bradford <rob@linux.intel.com>
Date:   Mon Jun 3 18:46:13 2013 +0100

    udev-seat: Fail input setup only if no devices are found
    
    Rather than failing if we cannot open any single device fail the input
    setup if there are no input devices added.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=64506


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.